src/test/ui/issues/issue-50264-inner-deref-trait/result-as_deref_mut_err.stderr
error[E0599]: no method named `as_deref_mut_err` found for enum `std::result::Result<_, {integer}>` in the current scope
  --> $DIR/result-as_deref_mut_err.rs:4:32
   |
LL |     let _result = &mut Err(41).as_deref_mut_err();
   |                                ^^^^^^^^^^^^^^^^ help: there is a method with a similar name: `as_deref_mut_ok`
   |
   = note: the method `as_deref_mut_err` exists but the following trait bounds were not satisfied:
           `{integer} : std::ops::DerefMut`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
